BugFixed: Sometimes the cursor in sidebar will jump.

--- a/assets/css/src/main.scss
+++ b/assets/css/src/main.scss
@@ -35,14 +35,13 @@ body {
 }
 
 #sidebar .nav-item {
-  padding: .7rem 0;
+  height: 20%;
 }
 
 #sidebar .nav-link {
   border-radius: 0;
   font-size: 1.1rem;
   font-weight: 700;
-  text-align: center;
 }
 
 #sidebar .nav-item:hover .nav-link {
@@ -50,55 +49,57 @@ body {
   font-size: 1.2rem;
 }
 
-#sidebar li.active>a.nav-link {
+#sidebar .nav-item.active .nav-link {
   background: rgba(0, 0, 0, 0.15);
   color: #c1c3c5;
 }
 
 #sidebar ul {
-  height: 18rem;
+  height: 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
 }
 
-.nav-hover {
+.cursor {
   background: #dae0e5;
   position: relative;
   display: none;
-  top: -83.7%;
+  top: 0;
   left: 98%;
   width: 4px;
-  height: 10%;
+  height: 15%;
   -webkit-transition: top 0.5s ease;
   -moz-transition: top 0.5s ease;
   transition: top 0.5s ease;
 }
 
-#sidebar ul>li.active:nth-child(1) ~ .nav-hover,
-#sidebar ul>li.nav-item:nth-child(1):hover ~ .nav-hover {
-  top: -83.7%;
+#sidebar ul>li.active:nth-child(1) ~ .cursor,
+#sidebar ul>li.nav-item:nth-child(1):hover ~ .cursor {
+  top: -97.5%;
   display: block;
 }
 
-#sidebar ul>li.active:nth-child(2) ~ .nav-hover,
-#sidebar ul>li.nav-item:nth-child(2):hover ~ .nav-hover {
-  top: -66.3%;
+#sidebar ul>li.active:nth-child(2) ~ .cursor,
+#sidebar ul>li.nav-item:nth-child(2):hover ~ .cursor {
+  top: -77.5%;
   display: block;
 }
 
-#sidebar ul>li.active:nth-child(3) ~ .nav-hover,
-#sidebar ul>li.nav-item:nth-child(3):hover ~ .nav-hover {
-  top: -48.6%;
+#sidebar ul>li.active:nth-child(3) ~ .cursor,
+#sidebar ul>li.nav-item:nth-child(3):hover ~ .cursor {
+  top: -57.5%;
   display: block;
 }
 
-#sidebar ul>li.active:nth-child(4) ~ .nav-hover,
-#sidebar ul>li.nav-item:nth-child(4):hover ~ .nav-hover {
-  top: -31.3%;
+#sidebar ul>li.active:nth-child(4) ~ .cursor,
+#sidebar ul>li.nav-item:nth-child(4):hover ~ .cursor {
+  top: -37.5%;
   display: block;
 }
 
-#sidebar ul>li.active:nth-child(5) ~ .nav-hover,
-#sidebar ul>li.nav-item:nth-child(5):hover ~ .nav-hover {
-  top: -13.9%;
+#sidebar ul>li.active:nth-child(5) ~ .cursor,
+#sidebar ul>li.nav-item:nth-child(5):hover ~ .cursor {
+  top: -17.5%;
   display: block;
 }
 
@@ -115,12 +116,10 @@ body {
   flex-grow: 1;
 }
 
-.nav-link {
-  color: #656262;
-}
-
-.nav-item a.nav-link {
+.nav-item .nav-link {
+  text-align: center;
   padding: 0;
+  color: #656262;
 }
 
 #logo-wrap {
@@ -180,7 +179,7 @@ body {
   text-align: center;
   color: rgb(113, 110, 109);;
   line-height: 1.2rem;
-  padding: 1rem 1.5rem 2rem 1.5rem;
+  padding: .6rem 1.5rem 2rem 1.5rem;
 }
 
 #search-result-wrap {
@@ -1177,7 +1176,7 @@ html, body {
     -webkit-transform: translateX(-260px);
   }
 
-  #sidebar .nav-hover {
+  #sidebar .cursor {
     -webkit-transition: none;
     -moz-transition: none;
     transition: none;
